--- a/templates/UI/index.html
+++ b/templates/UI/index.html
@@ -13,7 +13,6 @@
 	<header>
 		<div class="container">
 			<div id="logo">
-				<!-- <h1><span class="highlight"> Beaut </span>Fast Food</h1> -->
 			<img src="img/logo_fff.png">
 			</div>
 
@@ -24,8 +23,6 @@
 					<li><a href="#">Services</a></li>
 				</ul>
 			</nav>
-
-
 		</div>
 	</header>
 
@@ -36,7 +33,7 @@
 			<h1>Excellent Fast Food Delivery Service</h1>
 			<!-- Login form -->
 
-			 <aside class="sidebar">
+			 <!-- <aside class="sidebar"> -->
 				<div class="dark">
 				<h3>Sign in</h3>
 				<h5>New to Fast-Food-Fast? <span class="highlight"> <a href="signup.html"> Sign up </a></span></h5>
@@ -54,22 +51,9 @@
 					<button class="button_1" type="submit">Sign In</button>
 				</form>
 				</div>
-			</aside>
-
-
+			<!-- </aside> -->
 		</div>
 	</section>
-
-	<!-- <section id="newsletter">
-		<div class="container">
-			<h1>Subscribe to Our Newsletter</h1>
-			<form>
-				<input type="email" placeholder="Enter Email..." >
-				<button type="submit" class="button_1">Subscribe</button>
-			</form>
-		</div>
-	</section> -->
-
 
 	<footer>
 		<p>Fast-Food-Fast, Copyright &copy; 2018</p>
