--- a/templates/UI/placeOrders.html
+++ b/templates/UI/placeOrders.html
@@ -36,7 +36,7 @@
 				<h1>Excellent Fast Food Delivery Service</h1>
 				<p>Place your orders and have it delivered to you in no time</p>
 
-				<div class="menu-category">
+				<!-- <div class="menu-category">
 					<span><label>Select Category</label>
 						<select>
 							<option value="burgersandwichsharwama">Burgers, Sandwiches and Sharwama</option>
@@ -48,7 +48,7 @@
 							<option value="starter">Starter</option>
 						</select></span>
 
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
@@ -56,7 +56,7 @@
 		<section id="menulist">
 			<div class="container">
 				<article id="main-list">
-					<h1 class="menu-lists">Place Your Order</h1>
+					<!-- <h1 class="menu-lists">Place your Order and have it delivered to you in no time</h1> -->
 
 				</article>
 			</div>
