--- a/templates/UI/signup.html
+++ b/templates/UI/signup.html
@@ -18,7 +18,7 @@
 
 			<nav>
 				<ul>
-					<li class="current"><a href="../../index.html">Home</a></li>
+					<li class="current"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="services.html">Services</a></li>
 				</ul>
@@ -29,14 +29,14 @@
 	</header>
 
 	<section id="showcase">
-		
+
 		<div class="container">
-			
+
 			<h1>Excellent Fast Food Delivery Service</h1>
-			 <aside class="sidebar">
+			 <!-- <aside class="sidebar"> -->
 				<div class="dark">
 				<h3>Sign up</h3>
-				<h5>Already have an account? <span class="highlight"> <a href="../../index.html"> Sign In </a></span></h5>
+				<h5>Already have an account? <span class="highlight"> <a href="index.html"> Sign In </a></span></h5>
 				<form class="quote" method="post" action="placeOrders.html">
 					<div>
 						<label>Name</label><br>
@@ -61,23 +61,7 @@
 					<button class="button_1" type="submit">Sign Up</button>
 				</form>
 				</div>
-			</aside>
-		</div>
-	</section>
-
-	<section id="newsletter">
-		<div class="container">
-			<h1>Subscribe to Our Newsletter</h1>
-			<form>
-				<input type="email" placeholder="Enter Email..." >
-				<button type="submit" class="button_1">Subscribe</button>
-			</form>
-		</div>
-	</section>
-
-	<section id="boxes">
-		<div class="container">
-			
+			<!-- </aside> -->
 		</div>
 	</section>
 
