--- a/templates/UI/css/style.css
+++ b/templates/UI/css/style.css
@@ -1,10 +1,9 @@
 body{
-	font: 15px/1.5 Arial, Helvetica, sans-serif;
+	font: 15px/1.5 "Myriad Pro","Helvetica Neue",Helvetica,Arial,Sans-Serif;;
 	padding: 0;
 	margin: 0;
 	background-color: #f4f4f4;
 }
-
 
 /*Global*/
 .container{
@@ -47,7 +46,9 @@ ul, li, h3{
 
 .dark{
 	padding: 15px;
-	padding-left: 30px;
+	/*padding-left: 30px;*/
+	width: 50%;
+	margin: auto;
 	/*background: #35424a;*/
 	background: rgba(53,66,74,0.5);
 	color: #ffffff;
@@ -187,14 +188,13 @@ header a{
 }
 
 header li{
-
 	display: inline;
 	padding: 0 20px 0 20px;
 	float: left;
 
 }
 
-header #branding{
+header #logo{
 	float: left;
 }
 
@@ -203,7 +203,7 @@ header #logo img{
 	width: 180px;
 	height: 120px;
 }
-header #branding h1{
+header #logo h1{
 	margin: 0;
 }
 
@@ -235,16 +235,11 @@ header #profile img{
 }
 
 header #navprofile li#ordernav{
-
 	padding-top: 70px;
 	margin-top: 10px;
-
-
 }
-
 #header{
 	width:100%;
-
 }
 
 .men-cat h2{ background:#35424a; height:32px; color:#fff; padding: 0 10px; line-height:32px; white-space:nowrap; border-bottom:solid 1px #fff; }
@@ -254,7 +249,9 @@ header #navprofile li#ordernav{
 #showcase{
 	min-height: 400px;
 	background:url('../img/land.jpg') no-repeat 0 -400px;
-	text-align: center;
+	background-size: 100%;
+    background-position: 50% 50%;
+  	text-align: center;
 	color: #ffffff;
 }
 
@@ -276,44 +273,76 @@ header #navprofile li#ordernav{
 	margin-top: 10px;
 	text-align: left;
 	margin-bottom: 20px;
-
-
 }
 
-#showcase aside.sidebar h3, h5{
 
+/*#showcase aside.sidebar h3, h5{
+	text-align: center;
+	color: #ffffff;
+	border-bottom: none;
+}*/
+
+#showcase h3, h5{
 	text-align: center;
 	color: #ffffff;
 	border-bottom: none;
 
 }
-
-#showcase aside.sidebar a{
-
+#showcase a{
 	color: #e8491d;
 	font-weight: bold;
-
-
 }
 
-#showcase aside.sidebar .quote input{
-	width: 90%;
+/*#showcase aside.sidebar a{
+	color: #e8491d;
+	font-weight: bold;
+}*/
+
+#showcase .quote input{
 	padding: 5px;
+	margin: auto;
+	margin-bottom: 5px;
+	width: 70%
+}
+#showcase .quote input .button_1{
+	margin: 0;
+	padding: 0;
+}
+#showcase .quote label{
+text-align: left;
+}
+#showcase .quote h5{
+font-weight: normal;
+}
+
+/*#showcase aside.sidebar .quote input{
+	width: 50%;
+	padding: 5px;
+	margin: auto;
 	margin-bottom: 5px;
 
+}*/
 
-
-}
-
-#showcase aside.sidebar button, .quote button{
+/*#showcase button, .quote button{
 	display: block;
 	width: 95%;
-}
+}*/
 
-#showcase aside.sidebar .highlight{
+
+/*#showcase aside.sidebar button, .quote button{
+	display: block;
+	width: 95%;
+}*/
+
+#showcase .highlight{
 	color: #e8491d;
 	font-weight: bold;
 }
+
+/*#showcase aside.sidebar .highlight{
+	color: #e8491d;
+	font-weight: bold;
+}*/
 
 
 
@@ -333,29 +362,7 @@ header #navprofile li#ordernav{
 
 #showcase-menu #top h1{
 	color: #e8491d;
-}
-
-
-/*newsletter*/
-
-#newsletter{
-	padding: 15px;
-	color: #ffffff;
-	background: #35424a
-}
-
-#newsletter h1{
-	float: left;
-}
-#newsletter form{
-	float: right;
-	margin-top: 15px;
-}
-#newsletter input[type="email"]{
-	padding: 4px;
-	height: 25px;
-	width: 240px;
-
+	padding-top: 20px;
 }
 
 
@@ -854,8 +861,6 @@ section#menulist .container2{
 }
 
 
-
-
 /*All orders Admin*/
 
 #order-detail{
@@ -904,47 +909,58 @@ footer{
 /*media Queries*/
 
 @media(max-width: 768px){
-	header #logo,
-	header nav,
-	header nav li,
-	#newsletter h1,
-	#newsletter form,
+	header #logo, header nav, header nav li,
 	#boxes .box,
 	article#main-col,
 	aside#sidebar{
 		float: none;
 		text-align: center;
 		width: 100%;
-
 	}
-	header logo{
-		height: auto;
-	}
-
 	header{
 		padding-bottom: 20px;
 	}
-
+header #logo{
+	width: 20%;
+}
+	header h1{
+		font-size: 16px;
+	}
+	header nav{
+		padding: 0;
+	}
+	header nav li{
+			font-size: 12px;
+	}
+	#showcase{
+	background-repeat:no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+	}
 	#showcase h1{
 		margin-top: 40px;
-		font-size: 30px;
-	}
-	#newsletter button, .quote button{
-		display: block;
-		width: 100%;
-	}
-
-	#newsletter form input[type='email'], .quote input, .quote textarea{
-		width: 100%;
-		margin-bottom: 5px;
+		font-size: 15px;
 	}
 	table{
 overflow-x:auto;
 display: block
 }
 
+#showcase-menu #top h1{
+font-size: 16px;
 }
-/* Some media queries for responsiveness */
+#showcase-menu #top p{
+font-size: 12px;
+font-weight: normal;
+}
+#showcase h5{
+font-size: 8px;
+}
+
+}
+/* media queries */
 @media screen and (max-height: 450px) {
 	#sidebar-left{padding-top: 15px;}
 	#sidebar-left a {font-size: 18px;}
